# azure-sdk-for-rust-wasi-samples

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: main.rs
